chore: ignore credentials files

--- a/analysis/bootstraping-test.ipynb
+++ b/analysis/bootstraping-test.ipynb
@@ -44,8 +44,9 @@
     "  R = med2/med1\n",
     "  R.sort()\n",
     "\n",
-    "  CIsmall = 1\n",
+    "  CIsmall = 1 # 99% confidence interval\n",
     "  small = int((numberOfSamples * CIsmall) / 100 / 2)\n",
+    "  if small == 0: small = 1\n",
     "  minSmall = R[small-1]\n",
     "  minSmall = (minSmall - 1) * 100\n",
     "  maxSmall = R[numberOfSamples-small-1]\n",
