feat: analyze optimized mb suites

--- a/analysis/bootstraping-mb.ipynb
+++ b/analysis/bootstraping-mb.ipynb
@@ -55,10 +55,7 @@
     "  return minSmall, maxSmall, instability"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -81,46 +78,30 @@
     "    print(f\"[{fnName}] performance change: {change:.2f}% [{minci:.2f} - {maxci:.2f}] ({instability:.2f}%)\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[database.BenchmarkGet] performance change: -1.49% [-2.73 - 2.16] (4.89%)\n",
-      "[database.BenchmarkGetGenerics] performance change: -0.55% [-4.03 - 3.58] (7.62%)\n",
-      "[database.BenchmarkPut] performance change: 0.15% [-3.73 - 2.76] (6.49%)\n",
-      "[database.BenchmarkRawGet] performance change: -0.11% [-4.00 - 1.13] (5.13%)\n",
-      "[database.BenchmarkRawValues] performance change: 0.07% [-0.40 - 3.99] (4.39%)\n",
-      "[database.BenchmarkValues] performance change: -0.03% [-1.16 - 1.26] (2.42%)\n",
-      "[database.BenchmarkValuesGenerics] performance change: 0.28% [-1.92 - 1.64] (3.56%)\n",
-      "[service.BenchmarkHandlerCreateBooking] performance change: 0.84% [-1.61 - 2.85] (4.46%)\n",
-      "[service.BenchmarkHandlerGetBookings] performance change: -0.21% [-1.65 - 1.43] (3.08%)\n",
-      "[service.BenchmarkHandlerGetDestinations] performance change: -0.10% [-2.28 - 1.30] (3.58%)\n",
-      "[service.BenchmarkHandlerGetFlight] performance change: 0.88% [-2.28 - 8.15] (10.43%)\n",
-      "[service.BenchmarkHandlerGetFlightSeats] performance change: -0.76% [-2.30 - 2.58] (4.88%)\n",
-      "[service.BenchmarkHandlerGetFlights] performance change: 0.35% [-2.68 - 2.61] (5.29%)\n",
-      "[service.BenchmarkHandlerGetFlightsQuery] performance change: 0.58% [-5.89 - 2.29] (8.18%)\n",
-      "[service.BenchmarkRequestFlight] performance change: 61949.39% [59840.91 - 62355.47] (2514.56%)\n",
-      "[service.BenchmarkRequestFlights] performance change: 332.73% [274.47 - 338.56] (64.09%)\n",
-      "[service.BenchmarkRequestFlightsQuery] performance change: 69.41% [67.06 - 74.44] (7.37%)\n",
-      "[service.BenchmarkRequestSeats] performance change: 420.10% [410.47 - 425.34] (14.88%)\n"
+      "[service.BenchmarkHandlerCreateBooking] performance change: 0.54% [-0.73 - 3.58] (4.31%)\n",
+      "[service.BenchmarkHandlerGetFlightSeats] performance change: 0.30% [-1.47 - 1.40] (2.87%)\n",
+      "[service.BenchmarkRequestDestinations] performance change: 0.27% [-1.00 - 2.15] (3.15%)\n",
+      "[service.BenchmarkRequestFlightsQuery] performance change: 3.41% [2.12 - 5.01] (2.90%)\n"
      ]
     }
    ],
    "source": [
     "columnNames = [\"R-S-I\", \"package.BenchmarkFunction\", \"Version\", \"Directory\", \"Iterations\", \"sec/op\", \"B/op\", \"allocs/op\"]\n",
     "\n",
-    "#df = pd.read_csv(\"../results/fbs/mb-main-perf-issue-clean-path-2022-08-23T18:23:34+02:00.csv\", names=columnNames)\n",
-    "df = pd.read_csv(\"../results/fbs/mb-main-perf-issue-request-id-2022-08-23T19:44:15+02:00.csv\", names=columnNames)\n",
+    "df = pd.read_csv(\"../results/fbs/mb-main-perf-issue-clean-path-2022-09-23T13:30:10+02:00/combined.csv\", names=columnNames)\n",
+    "# df = pd.read_csv(\"../results/fbs/mb-main-perf-issue-request-id-2022-09-23T13:01:00+02:00/combined.csv\", names=columnNames)\n",
+    "# df = pd.read_csv(\"../results/fbs/mb-main-main-2022-09-23T12:10:26+02:00/combined.csv\", names=columnNames)\n",
     "functionNames = df[\"package.BenchmarkFunction\"].unique()\n",
     "functionNames.sort()\n",
     "\n",
@@ -128,20 +109,14 @@
     "    compareVersionsForBenchmark(fnName)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -150,10 +125,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
