--- a/analysis/bootstraping-mb.ipynb
+++ b/analysis/bootstraping-mb.ipynb
@@ -83,25 +83,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[service.BenchmarkHandlerCreateBooking] performance change: 0.54% [-0.73 - 3.58] (4.31%)\n",
-      "[service.BenchmarkHandlerGetFlightSeats] performance change: 0.30% [-1.47 - 1.40] (2.87%)\n",
-      "[service.BenchmarkRequestDestinations] performance change: 0.27% [-1.00 - 2.15] (3.15%)\n",
-      "[service.BenchmarkRequestFlightsQuery] performance change: 3.41% [2.12 - 5.01] (2.90%)\n"
+      "[database.BenchmarkGet] performance change: 1.02% [-1.69 - 3.08] (4.77%)\n",
+      "[database.BenchmarkGetGenerics] performance change: 0.11% [-2.29 - 3.59] (5.89%)\n",
+      "[database.BenchmarkPut] performance change: 1.15% [-2.64 - 2.95] (5.59%)\n",
+      "[database.BenchmarkRawGet] performance change: 0.00% [-3.49 - 2.31] (5.80%)\n",
+      "[database.BenchmarkRawValues] performance change: 0.14% [-0.42 - 0.66] (1.09%)\n",
+      "[database.BenchmarkValues] performance change: 0.32% [-1.31 - 1.18] (2.48%)\n",
+      "[database.BenchmarkValuesGenerics] performance change: 0.67% [-1.21 - 1.45] (2.66%)\n",
+      "[service.BenchmarkHandlerCreateBooking] performance change: -1.07% [-2.44 - 1.81] (4.25%)\n",
+      "[service.BenchmarkHandlerGetBookings] performance change: 0.18% [-1.91 - 1.83] (3.75%)\n",
+      "[service.BenchmarkHandlerGetDestinations] performance change: 0.04% [-2.22 - 1.74] (3.96%)\n",
+      "[service.BenchmarkHandlerGetFlight] performance change: -0.41% [-7.31 - 9.54] (16.84%)\n",
+      "[service.BenchmarkHandlerGetFlightSeats] performance change: -0.55% [-2.04 - 1.65] (3.69%)\n",
+      "[service.BenchmarkHandlerGetFlights] performance change: -1.23% [-3.70 - 1.43] (5.13%)\n",
+      "[service.BenchmarkHandlerGetFlightsQuery] performance change: 0.27% [-0.61 - 3.98] (4.59%)\n",
+      "[service.BenchmarkRequestBookings] performance change: 14.62% [11.99 - 20.67] (8.67%)\n",
+      "[service.BenchmarkRequestDestinations] performance change: 1.12% [-1.37 - 2.47] (3.85%)\n",
+      "[service.BenchmarkRequestFlight] performance change: 0.39% [-0.12 - 3.69] (3.81%)\n",
+      "[service.BenchmarkRequestFlights] performance change: 1.28% [-0.85 - 2.98] (3.83%)\n",
+      "[service.BenchmarkRequestFlightsQuery] performance change: -1.11% [-3.61 - 1.05] (4.65%)\n",
+      "[service.BenchmarkRequestSeats] performance change: -0.20% [-1.41 - 1.98] (3.39%)\n"
      ]
     }
    ],
    "source": [
     "columnNames = [\"R-S-I\", \"package.BenchmarkFunction\", \"Version\", \"Directory\", \"Iterations\", \"sec/op\", \"B/op\", \"allocs/op\"]\n",
     "\n",
-    "df = pd.read_csv(\"../results/fbs/mb-main-perf-issue-clean-path-2022-09-23T13:30:10+02:00/combined.csv\", names=columnNames)\n",
+    "#df = pd.read_csv(\"../results/fbs/mb-main-perf-issue-clean-path-2022-09-23T13:30:10+02:00/combined.csv\", names=columnNames)\n",
     "# df = pd.read_csv(\"../results/fbs/mb-main-perf-issue-request-id-2022-09-23T13:01:00+02:00/combined.csv\", names=columnNames)\n",
     "# df = pd.read_csv(\"../results/fbs/mb-main-main-2022-09-23T12:10:26+02:00/combined.csv\", names=columnNames)\n",
+    "df = pd.read_csv(\"../results/mb-main-perf-issue-basic-auth-2022-10-19T12:30:13+02:00/combined.csv\", names=columnNames)\n",
     "functionNames = df[\"package.BenchmarkFunction\"].unique()\n",
     "functionNames.sort()\n",
     "\n",
