feat: analysis updates

--- a/analysis/bootstraping-mb.ipynb
+++ b/analysis/bootstraping-mb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def compareVersionsForBenchmark(fnName: str):\n",
@@ -92,24 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[service.BenchmarkHandlerGetFlightSeats] performance change: 0.16% [-1.33 - 1.68] (3.01%)\n",
-      "[service.BenchmarkRequestCreateBooking] performance change: 5499.90% [5400.04 - 5575.03] (174.99%)\n",
-      "[service.BenchmarkRequestDestinations] performance change: 42.07% [39.97 - 43.32] (3.35%)\n",
-      "[service.BenchmarkRequestFlights] performance change: 222.25% [218.15 - 224.26] (6.11%)\n"
+      "[service.BenchmarkHandlerGetFlightSeats] performance change: 0.09% [-1.80 - 1.76] (3.55%)\n",
+      "[service.BenchmarkRequestCreateBooking] performance change: 0.04% [-3.88 - 3.14] (7.02%)\n",
+      "[service.BenchmarkRequestDestinations] performance change: 0.05% [-1.24 - 1.96] (3.20%)\n",
+      "[service.BenchmarkRequestFlights] performance change: 0.52% [-3.08 - 0.68] (3.76%)\n"
      ]
     },
     {
      "data": {
-      "text/plain": "                                  benchFn       change        minci  \\\n0  service.BenchmarkHandlerGetFlightSeats     0.157625    -1.326302   \n1   service.BenchmarkRequestCreateBooking  5499.904131  5400.036879   \n2    service.BenchmarkRequestDestinations    42.074174    39.971338   \n3         service.BenchmarkRequestFlights   222.251293   218.148917   \n\n         maxci                                            refData  \\\n0     1.681154  [-2.0587320079991644, -1.9819080608081352, -1....   \n1  5575.028317  [5351.389844224154, 5355.695018003539, 5360.98...   \n2    43.318799  [39.64631700837216, 39.64631700837216, 39.6785...   \n3   224.260636  [216.74478910932433, 216.82911597409708, 216.9...   \n\n                           benchmark  \n0  mb-opt-main-perf-issue-request-id  \n1  mb-opt-main-perf-issue-request-id  \n2  mb-opt-main-perf-issue-request-id  \n3  mb-opt-main-perf-issue-request-id  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>benchFn</th>\n      <th>change</th>\n      <th>minci</th>\n      <th>maxci</th>\n      <th>refData</th>\n      <th>benchmark</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>service.BenchmarkHandlerGetFlightSeats</td>\n      <td>0.157625</td>\n      <td>-1.326302</td>\n      <td>1.681154</td>\n      <td>[-2.0587320079991644, -1.9819080608081352, -1....</td>\n      <td>mb-opt-main-perf-issue-request-id</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>service.BenchmarkRequestCreateBooking</td>\n      <td>5499.904131</td>\n      <td>5400.036879</td>\n      <td>5575.028317</td>\n      <td>[5351.389844224154, 5355.695018003539, 5360.98...</td>\n      <td>mb-opt-main-perf-issue-request-id</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>service.BenchmarkRequestDestinations</td>\n      <td>42.074174</td>\n      <td>39.971338</td>\n      <td>43.318799</td>\n      <td>[39.64631700837216, 39.64631700837216, 39.6785...</td>\n      <td>mb-opt-main-perf-issue-request-id</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>service.BenchmarkRequestFlights</td>\n      <td>222.251293</td>\n      <td>218.148917</td>\n      <td>224.260636</td>\n      <td>[216.74478910932433, 216.82911597409708, 216.9...</td>\n      <td>mb-opt-main-perf-issue-request-id</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                  benchFn    change     minci     maxci  \\\n0  service.BenchmarkHandlerGetFlightSeats  0.093838 -1.795398  1.758551   \n1   service.BenchmarkRequestCreateBooking  0.036612 -3.877067  3.142310   \n2    service.BenchmarkRequestDestinations  0.053905 -1.241411  1.962044   \n3         service.BenchmarkRequestFlights  0.520340 -3.081976  0.675763   \n\n                                             refData         benchmark  \n0  [-2.6980204513140205, -2.6250924716289203, -2....  mb-opt-main-main  \n1  [-4.517600396628662, -4.4184432325235505, -4.4...  mb-opt-main-main  \n2  [-2.3270281975981133, -1.6531057721994924, -1....  mb-opt-main-main  \n3  [-4.122826443882732, -4.122826443882732, -4.12...  mb-opt-main-main  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>benchFn</th>\n      <th>change</th>\n      <th>minci</th>\n      <th>maxci</th>\n      <th>refData</th>\n      <th>benchmark</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>service.BenchmarkHandlerGetFlightSeats</td>\n      <td>0.093838</td>\n      <td>-1.795398</td>\n      <td>1.758551</td>\n      <td>[-2.6980204513140205, -2.6250924716289203, -2....</td>\n      <td>mb-opt-main-main</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>service.BenchmarkRequestCreateBooking</td>\n      <td>0.036612</td>\n      <td>-3.877067</td>\n      <td>3.142310</td>\n      <td>[-4.517600396628662, -4.4184432325235505, -4.4...</td>\n      <td>mb-opt-main-main</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>service.BenchmarkRequestDestinations</td>\n      <td>0.053905</td>\n      <td>-1.241411</td>\n      <td>1.962044</td>\n      <td>[-2.3270281975981133, -1.6531057721994924, -1....</td>\n      <td>mb-opt-main-main</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>service.BenchmarkRequestFlights</td>\n      <td>0.520340</td>\n      <td>-3.081976</td>\n      <td>0.675763</td>\n      <td>[-4.122826443882732, -4.122826443882732, -4.12...</td>\n      <td>mb-opt-main-main</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,10 +122,10 @@
     "# benchmarkName = \"mb-main-perf-issue-clean-path-2022-11-18T15:48:32+01:00\"\n",
     "# benchmarkName = \"mb-main-perf-issue-request-id-2022-11-18T16:51:40+01:00\"\n",
     "#\n",
-    "# benchmarkName = \"mb-opt-main-main-2022-11-18T19:04:25+01:00\"\n",
+    "benchmarkName = \"mb-opt-main-main-2022-11-18T19:04:25+01:00\"\n",
     "# benchmarkName = \"mb-opt-main-perf-issue-basic-auth-2022-11-18T19:59:39+01:00\"\n",
     "# benchmarkName = \"mb-opt-main-perf-issue-clean-path-2022-11-18T19:22:57+01:00\"\n",
-    "benchmarkName = \"mb-opt-main-perf-issue-request-id-2022-11-18T19:41:16+01:00\"\n",
+    "# benchmarkName = \"mb-opt-main-perf-issue-request-id-2022-11-18T19:41:16+01:00\"\n",
     "\n",
     "benchmarkPrettyName = \"-\".join(benchmarkName.split(\"-\")[:-3])\n",
     "df = pd.read_csv(f\"../results/fbs/{benchmarkName}/combined.csv\", names=columnNames)\n",
