feat: analysis updates

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -13,18 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                       benchmark                      endpoint      change  \\\n0                   ab-main-main             GET /destinations   -1.505517   \n1                   ab-main-main      GET /flights/${id}/seats   -2.203107   \n2                   ab-main-main  GET /flights?from=${airport}   -2.838814   \n3                   ab-main-main                POST /bookings   -3.324367   \n0  ab-main-perf-issue-clean-path             GET /destinations   55.742484   \n1  ab-main-perf-issue-clean-path      GET /flights/${id}/seats  181.434111   \n2  ab-main-perf-issue-clean-path  GET /flights?from=${airport}   59.592115   \n3  ab-main-perf-issue-clean-path                POST /bookings   99.406619   \n0  ab-main-perf-issue-request-id             GET /destinations  354.768696   \n1  ab-main-perf-issue-request-id      GET /flights/${id}/seats  509.215514   \n2  ab-main-perf-issue-request-id  GET /flights?from=${airport}  295.066370   \n3  ab-main-perf-issue-request-id                POST /bookings  771.919837   \n0  ab-main-perf-issue-basic-auth             GET /destinations   11.484443   \n1  ab-main-perf-issue-basic-auth      GET /flights/${id}/seats   21.451574   \n2  ab-main-perf-issue-basic-auth  GET /flights?from=${airport}   10.776579   \n3  ab-main-perf-issue-basic-auth                POST /bookings  269.946702   \n\n        minci       maxci  \n0   -2.666349   -0.398493  \n1   -8.607233    4.372813  \n2   -3.863086   -1.767876  \n3  -12.020672    6.322179  \n0   54.191371   57.299000  \n1  163.716813  203.724169  \n2   58.037122   61.079529  \n3   82.292832  116.278630  \n0  349.998645  359.723391  \n1  468.413879  556.472117  \n2  290.031311  300.169350  \n3  698.975240  845.306804  \n0   10.430298   12.554857  \n1   11.920198   30.819044  \n2    9.682251   11.831671  \n3  240.611673  298.115238  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>benchmark</th>\n      <th>endpoint</th>\n      <th>change</th>\n      <th>minci</th>\n      <th>maxci</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ab-main-main</td>\n      <td>GET /destinations</td>\n      <td>-1.505517</td>\n      <td>-2.666349</td>\n      <td>-0.398493</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ab-main-main</td>\n      <td>GET /flights/${id}/seats</td>\n      <td>-2.203107</td>\n      <td>-8.607233</td>\n      <td>4.372813</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ab-main-main</td>\n      <td>GET /flights?from=${airport}</td>\n      <td>-2.838814</td>\n      <td>-3.863086</td>\n      <td>-1.767876</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ab-main-main</td>\n      <td>POST /bookings</td>\n      <td>-3.324367</td>\n      <td>-12.020672</td>\n      <td>6.322179</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>ab-main-perf-issue-clean-path</td>\n      <td>GET /destinations</td>\n      <td>55.742484</td>\n      <td>54.191371</td>\n      <td>57.299000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ab-main-perf-issue-clean-path</td>\n      <td>GET /flights/${id}/seats</td>\n      <td>181.434111</td>\n      <td>163.716813</td>\n      <td>203.724169</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ab-main-perf-issue-clean-path</td>\n      <td>GET /flights?from=${airport}</td>\n      <td>59.592115</td>\n      <td>58.037122</td>\n      <td>61.079529</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ab-main-perf-issue-clean-path</td>\n      <td>POST /bookings</td>\n      <td>99.406619</td>\n      <td>82.292832</td>\n      <td>116.278630</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>ab-main-perf-issue-request-id</td>\n      <td>GET /destinations</td>\n      <td>354.768696</td>\n      <td>349.998645</td>\n      <td>359.723391</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ab-main-perf-issue-request-id</td>\n      <td>GET /flights/${id}/seats</td>\n      <td>509.215514</td>\n      <td>468.413879</td>\n      <td>556.472117</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ab-main-perf-issue-request-id</td>\n      <td>GET /flights?from=${airport}</td>\n      <td>295.066370</td>\n      <td>290.031311</td>\n      <td>300.169350</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ab-main-perf-issue-request-id</td>\n      <td>POST /bookings</td>\n      <td>771.919837</td>\n      <td>698.975240</td>\n      <td>845.306804</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>ab-main-perf-issue-basic-auth</td>\n      <td>GET /destinations</td>\n      <td>11.484443</td>\n      <td>10.430298</td>\n      <td>12.554857</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ab-main-perf-issue-basic-auth</td>\n      <td>GET /flights/${id}/seats</td>\n      <td>21.451574</td>\n      <td>11.920198</td>\n      <td>30.819044</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ab-main-perf-issue-basic-auth</td>\n      <td>GET /flights?from=${airport}</td>\n      <td>10.776579</td>\n      <td>9.682251</td>\n      <td>11.831671</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ab-main-perf-issue-basic-auth</td>\n      <td>POST /bookings</td>\n      <td>269.946702</td>\n      <td>240.611673</td>\n      <td>298.115238</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 19,
+   "outputs": [],
    "source": [
     "df_app = pd.concat([\n",
     "  pd.read_csv(f\"./ab-main-main-bootstrap.csv\"),\n",
@@ -32,7 +22,18 @@
     "  pd.read_csv(f\"./ab-main-perf-issue-request-id-bootstrap.csv\"),\n",
     "  pd.read_csv(f\"./ab-main-perf-issue-basic-auth-bootstrap.csv\")\n",
     "])\n",
-    "df_app"
+    "df_mb = pd.concat([\n",
+    "    pd.read_csv(f\"./mb-main-main-bootstrap.csv\"),\n",
+    "    pd.read_csv(f\"./mb-main-perf-issue-clean-path-bootstrap.csv\"),\n",
+    "    pd.read_csv(f\"./mb-main-perf-issue-request-id-bootstrap.csv\"),\n",
+    "    pd.read_csv(f\"./mb-main-perf-issue-basic-auth-bootstrap.csv\")\n",
+    "])\n",
+    "df_mb_opt = pd.concat([\n",
+    "    pd.read_csv(f\"./mb-opt-main-main-bootstrap.csv\"),\n",
+    "    pd.read_csv(f\"./mb-opt-main-perf-issue-clean-path-bootstrap.csv\"),\n",
+    "    pd.read_csv(f\"./mb-opt-main-perf-issue-request-id-bootstrap.csv\"),\n",
+    "    pd.read_csv(f\"./mb-opt-main-perf-issue-basic-auth-bootstrap.csv\")\n",
+    "])"
    ],
    "metadata": {
     "collapsed": false
@@ -70,6 +71,7 @@
     }
    ],
    "source": [
+    "# app\n",
     "benchmarks = df_app[\"benchmark\"].unique()\n",
     "endpoints = df_app[\"endpoint\"].unique()\n",
     "for b in benchmarks:\n",
@@ -99,22 +101,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_mb_opt = pd.concat([\n",
-    "    pd.read_csv(f\"./mb-opt-main-main-bootstrap.csv\"),\n",
-    "    pd.read_csv(f\"./mb-opt-main-perf-issue-clean-path-bootstrap.csv\"),\n",
-    "    pd.read_csv(f\"./mb-opt-main-perf-issue-request-id-bootstrap.csv\"),\n",
-    "    pd.read_csv(f\"./mb-opt-main-perf-issue-basic-auth-bootstrap.csv\")\n",
-    "])\n",
-    "df_mb_opt"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -144,12 +138,74 @@
     }
    ],
    "source": [
+    "# mb-opt\n",
     "benchmarks = df_mb_opt[\"benchmark\"].unique()\n",
     "benchFns = df_mb_opt[\"benchFn\"].unique()\n",
     "for b in benchmarks:\n",
     "    print(b)\n",
     "    for e in benchFns:\n",
     "        d = df_mb_opt[(df_mb_opt[\"benchmark\"] == b) & (df_mb_opt[\"benchFn\"] == e)]\n",
+    "        change = d.iloc[0][\"change\"]\n",
+    "        minci = d.iloc[0][\"minci\"]\n",
+    "        maxci = d.iloc[0][\"maxci\"]\n",
+    "        print(f\"\\t{change:.2f}% [{minci:.2f}; {maxci:.2f}] ({e})\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mb-main-main\n",
+      "\t0.10% [-3.07; 3.38] (service.BenchmarkRequestBookings)\n",
+      "\t0.17% [-1.20; 4.13] (service.BenchmarkRequestCreateBooking)\n",
+      "\t0.22% [-1.99; 2.41] (service.BenchmarkRequestDestinations)\n",
+      "\t-0.49% [-3.26; 0.76] (service.BenchmarkRequestFlight)\n",
+      "\t-0.10% [-2.05; 2.37] (service.BenchmarkRequestFlights)\n",
+      "\t0.04% [-2.38; 1.56] (service.BenchmarkRequestFlightsQuery)\n",
+      "\t-0.45% [-1.80; 1.74] (service.BenchmarkRequestSeats)\n",
+      "mb-main-perf-issue-clean-path\n",
+      "\t-0.13% [-2.50; 4.20] (service.BenchmarkRequestBookings)\n",
+      "\t-1.21% [-3.94; 1.79] (service.BenchmarkRequestCreateBooking)\n",
+      "\t-0.19% [-2.29; 2.26] (service.BenchmarkRequestDestinations)\n",
+      "\t39212.50% [38749.89; 39696.21] (service.BenchmarkRequestFlight)\n",
+      "\t48.26% [46.02; 54.59] (service.BenchmarkRequestFlights)\n",
+      "\t8.95% [6.76; 14.54] (service.BenchmarkRequestFlightsQuery)\n",
+      "\t294.20% [287.95; 305.08] (service.BenchmarkRequestSeats)\n",
+      "mb-main-perf-issue-request-id\n",
+      "\t415.75% [393.39; 419.93] (service.BenchmarkRequestBookings)\n",
+      "\t5467.31% [5406.19; 5647.13] (service.BenchmarkRequestCreateBooking)\n",
+      "\t41.83% [40.05; 42.68] (service.BenchmarkRequestDestinations)\n",
+      "\t41660.76% [40616.21; 42561.34] (service.BenchmarkRequestFlight)\n",
+      "\t220.67% [214.38; 226.75] (service.BenchmarkRequestFlights)\n",
+      "\t44.48% [43.09; 45.60] (service.BenchmarkRequestFlightsQuery)\n",
+      "\t268.85% [262.13; 273.09] (service.BenchmarkRequestSeats)\n",
+      "mb-main-perf-issue-basic-auth\n",
+      "\t670.15% [655.76; 718.54] (service.BenchmarkRequestBookings)\n",
+      "\t9328.87% [8451.43; 9533.09] (service.BenchmarkRequestCreateBooking)\n",
+      "\t-0.16% [-2.01; 1.78] (service.BenchmarkRequestDestinations)\n",
+      "\t1.15% [-0.22; 3.86] (service.BenchmarkRequestFlight)\n",
+      "\t0.49% [-1.85; 1.38] (service.BenchmarkRequestFlights)\n",
+      "\t0.63% [-1.53; 2.23] (service.BenchmarkRequestFlightsQuery)\n",
+      "\t-0.83% [-1.60; 1.33] (service.BenchmarkRequestSeats)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mb\n",
+    "benchmarks = df_mb[\"benchmark\"].unique()\n",
+    "benchFns = df_mb[\"benchFn\"].unique()\n",
+    "for b in benchmarks:\n",
+    "    print(b)\n",
+    "    for e in benchFns:\n",
+    "        if not e.startswith(\"service.BenchmarkRequest\"): continue\n",
+    "        d = df_mb[(df_mb[\"benchmark\"] == b) & (df_mb[\"benchFn\"] == e)]\n",
     "        change = d.iloc[0][\"change\"]\n",
     "        minci = d.iloc[0][\"minci\"]\n",
     "        maxci = d.iloc[0][\"maxci\"]\n",
